--- a/templates/sb/info.html
+++ b/templates/sb/info.html
@@ -34,7 +34,7 @@
   <script>
     function repostAlert()
     {
-        alert("点击”确定“将转发所有抽奖动态\n前后端交互还不太会.. 不想抽的奖请自行到data.csv中，把是否已转发列标为-1\n由于b站限制过快的转发速度，设置为随机30秒~3分钟转发一条。请耐心等待，结束后自动跳转");
+        alert("点击”确定“将转发所有选中抽奖动态\n由b站限制过快的转发速度，设置为随机30秒~3分钟转发一条。请耐心等待，结束后自动跳转");
     }
   </script>
 </head>
