--- a/templates/sb/repostRes.html
+++ b/templates/sb/repostRes.html
@@ -9,10 +9,8 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-    <title>unfollowo</title>
-
+  <title>repost</title>
   <link rel="shortcut icon" href="/static/ico/favicon.ico">
-
   <!-- Custom fonts for this template-->
   <link href="../../static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
@@ -52,7 +50,7 @@
         <div class="sidebar-brand-text mx-3">Bilibili 抽奖助手</div>
       </a>
 
-      <!-- Divider -->
+       <!-- Divider -->
       <hr class="sidebar-divider my-0">
 
       <!-- Nav Item - Dashboard -->
@@ -168,8 +166,8 @@
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <h1 class="h3 mb-4 text-gray-800">清除结束</h1>
-          <h1 class="h3 mb-4 text-gray-800">共取关{{ num }}位up主 </h1>
+          <h1 class="h3 mb-4 text-gray-800">转发结束</h1>
+          <h1 class="h3 mb-4 text-gray-800">共转发{{ num }}条动态 </h1>
 
         </div>
         <!-- /.container-fluid -->
