--- a/templates/sb/repost.html
+++ b/templates/sb/repost.html
@@ -32,7 +32,7 @@
   <script>
     function repostAlert()
     {
-        alert("点击”确定“将转发所有抽奖动态\n前后端交互还不太会.. 不想抽的奖请自行到data.csv中，把是否已转发列标为-1\n由于b站限制过快的转发速度，设置为随机30秒~3分钟转发一条。请耐心等待，结束后自动跳转");
+        alert("点击”确定“将转发所有选中抽奖动态\n由b站限制过快的转发速度，设置为随机30秒~3分钟转发一条。请耐心等待，结束后自动跳转");
     }
   </script>
 </head>
@@ -164,14 +164,58 @@
 
         <!-- Begin Page Content -->
         <div class="container-fluid">
+            <form action="{{ url_for('repost_res') }}" method="post">
+              <!-- DataTales Example -->
+              <div class="card shadow mb-4">
+                <div class="card-header py-3">
+                  <h6 class="m-0 font-weight-bold text-primary">要抽哪些奖呢</h6>
+                </div>
 
-          <!-- Page Heading -->
-          <h1 class="h3 mb-4 text-gray-800">转发结束</h1>
-          <h1 class="h3 mb-4 text-gray-800">共转发{{ num }}条动态 </h1>
-
-        </div>
+              <div class="card-body"></div>
+                <div class="card-body">
+                  <div class="table-responsive">
+                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                      <thead>
+                        <tr>
+                            <th></th>
+                            <th>up主</th>
+                            <th>奖品</th>
+                            <th>开奖时间</th>
+                            <th>链接</th>
+                        </tr>
+                      </thead>
+                      <tfoot>
+                        <tr>
+                            <th></th>
+                            <th>up主</th>
+                            <th>奖品</th>
+                            <th>开奖时间</th>
+                            <th>链接</th>
+                        </tr>
+                      </tfoot>
+                      <tbody>
+                        {% for item in lottery %}
+                        <tr>
+                          <td><label><input name="repost" type="checkbox" value={{ value[loop.index - 1] }}></label></td>
+                          <td>{{ item[1][2] }}</td>
+                          <td>{{ item[1][5] }}</td>
+                          <td>{{ item[1][3] }}</td>
+                          <td>{{ item[1][7] }}</td>
+                        </tr>
+                        {% endfor %}
+                      </tbody>
+                    </table>
+                    <button type="submit" class="btn btn-primary btn-icon-split">
+                      <span class="icon text-white-50">
+                        <i class="fas fa-check"></i>
+                      </span>
+                      <span class="text">提交</span>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </form>
         <!-- /.container-fluid -->
-
       </div>
       <!-- End of Main Content -->
 
