--- a/templates/sb/index.html
+++ b/templates/sb/index.html
@@ -33,12 +33,6 @@
         alert("点击”确定“将删除所有已开奖的转发动态并取关设奖的up主\n系统只会取关您为抽奖而设立的分组下的up，其他分组内的up主不会被取关\n由于b站限制过快的操作速度，设置为随机1秒~10秒删除一条。结束后自动跳转");
     }
   </script>
-  <script>
-    function repostAlert()
-    {
-        alert("点击”确定“将转发所有选中抽奖动态\n由b站限制过快的转发速度，设置为随机30秒~3分钟转发一条。请耐心等待，结束后自动跳转");
-    }
-  </script>
 </head>
 
 <body id="page-top">
@@ -88,7 +82,7 @@
       </li>
       <!-- Nav Item - Prescription Menu -->
       <li class="nav-item">
-        <a class="nav-link collapsed" href="{{ url_for("repost") }}" onclick="repostAlert()">
+        <a class="nav-link collapsed" href="{{ url_for("repost") }}">
           <i class="fas fa-fw fa-stethoscope"></i>
           <span>一键转发</span>
         </a>
